# airflow_daggen_from_ui_example

./: .gitignore  README.md  airflow_api_request.py  pyproject.toml  setup.py
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yaml
airflow_dag_generator/: __init__.py  plugin.py  views.py
airflow_dag_generator/generators/: __init__.py  base_generator.py  discovery.py  hello_world_generator.py  registry.py
airflow_dag_generator/models/: form_fields.py
airflow_dag_generator/templates/dag_generator/: base.html  form.html  generator_form.html  index.html  preview.html
airflow_dag_generator/templates/static/css/: dag-generator.css  header-footer.css  index.css
airflow_dag_generator/templates/static/js/: api-client.js  dynamic-form-builder.js  edit-manager.js  index.js  main.js  navigation.js  search-manager.js  utils.js
airflow_dag_generator/utils/: __init__.py  metadata_parser.py  utils.py  validators.py
dags/: my_super_dag.py  new_dag.py
dags/generators/: api_generator.py  custom_generator.py  hello_world_generator.py  my_custom_generator.py
plugins/dag_generator/: __init__.py  plugin.py  views.py
plugins/dag_generator/generators/: __init__.py  hello_world_generator.py
plugins/dag_generator/templates/dag_generator/: error.html
plugins/dag_generator/utils/: __init__.py  validators.py
